--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
-    <title>Hệ thống cộng tác viên sale - Dailong Media</title>
+    <title>CTV Dailong</title>
     <meta name="theme-color" content="#F97316">
-    <link rel="apple-touch-icon" href="/logologin.png" sizes="180x180">
+    <link rel="apple-touch-icon" href="/logoapp.png" sizes="180x180">
   </head>
 
   <body>
